revert componented did updated chnages fixed step jump issue.

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1572,32 +1572,6 @@ template {
   margin-bottom: 30px;
   position: relative;
 }
-  margin-top: -20px;
-  margin-bottom: 20px;
-  position: relative;
-}
-.version-item:before {
-  position: absolute;
-  top: 50%;
-  right: 0px;
-  visibility: visible;
-  pointer-events: none;
-  width: 32px;
-  height: 20px;
-  line-height: 20px;
-  margin-top: -10px;
-  text-align: center;
-  font-size: 14px;
-  -webkit-animation: zoomIn 0.3s cubic-bezier(0.12, 0.4, 0.29, 1.46);
-  animation: zoomIn 0.3s cubic-bezier(0.12, 0.4, 0.29, 1.46);
-  font-family: "anticon";
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  content: "\E653";
-  z-index: 1;
-  color: #a0a0a0;
-}
 .waiting-filter-warpper {
   overflow: hidden;
 }
